--- a/package.json
+++ b/package.json
@@ -8,16 +8,9 @@
     "start": "node server.js",
     "seed": "node seeds/seed.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RachelWildberger/mvc-tech-blog.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/RachelWildberger/mvc-tech-blog/issues"
-  },
-  "homepage": "https://github.com/RachelWildberger/mvc-tech-blog#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
     "connect-session-sequelize": "^7.0.4",
